--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -217,39 +217,46 @@ nav {
             font-size: 20px;
         
             li {
-                padding: 10px 20px;
                 margin-bottom: 10px;
-                border-radius: 2rem;
-                transition: 0.1s background-color;
-                background-color: rgba(255, 255, 255, 0.123);
-
+                
                 &:last-child {
                     margin-bottom: 0;
                 }
             }
         
-            li:hover {
-                background-color: rgba(255, 255, 255, 0.219);
-            }
-        
             a {
+                padding: 10px 20px;
+                display: block;
+                border-radius: 2rem;
                 text-decoration: none;
                 color: white;
-                transition: 0.1s color;
+                transition: 0.1s color, background-color;
                 font-weight: bold;
-            }
-            
-            a:hover {
-                color: rgb(219, 219, 219);
+                background-color: rgba(255, 255, 255, 0.123);
+                width: 100%;
+
+                &:hover {
+                    color: rgb(219, 219, 219);
+                    background-color: rgba(255, 255, 255, 0.219);
+                }
             }
 
             button {
+                padding: 10px 20px;
+                width: 100%;
+                border-radius: 2rem;
                 background-color: transparent;
                 color: white;
                 border: none;
                 font-size: 20px;
                 font-weight: bold;
-                padding: 0;
+                transition: 0.1s color, background-color;
+                background-color: rgba(255, 255, 255, 0.123);
+
+                &:hover {
+                    color: rgb(219, 219, 219);
+                    background-color: rgba(255, 255, 255, 0.219);
+                }
             }
         }
     }
@@ -267,10 +274,6 @@ nav {
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1020;
-}
-
-.logo-container-md {
-    flex: 0.6;
 }
 
 @media (max-width: 1024px) {
